# xpy

./: .clang-format  .gitignore  .gitmodules  README.md
Assets/: UnityTestDll.cs  UnityTestPy.cs  main.unity
Assets/PyScript/: globalvars.py  import_ex.py  log.py  main.py  sharp.py  test.py  test_import1.py  test_sharp.py  xpy.py
Assets/PyScript/libs/: pycharm-debug-py3k.egg
Assets/Script/: emb.py  log.py  main.py  sharp.py  xpy.py
Assets/SharpPy/: Log.cs  PyEnv.cs  SharpObject.cs
Assets/SharpPy/Editor/: ShowPyScript.cs
Assets/xpy/: Log.cs  PyDLL.cs  PyEnv.cs
Assets/xpy/Editor/: ShowPyScript.cs
Doc/: build-native-library.md  python-remote-debug.md
Native/: README.md  gensln.bat  update_project.py
Native/xpy/: CMakeLists.txt
Native/xpy/sharp/: BasePyTest.cs  Program.cs  PyDLL.cs  PyEnv.cs  SharpObject.cs  log.cs  sharp.csproj  sharptest.csproj
Native/xpy/sharp/Properties/: AssemblyInfo.cs
Native/xpy/sharp/script/: ClientAppPy.cs
Native/xpy/sharp/sharppy/: PyEnv.cs  SharpObject.cs
Native/xpy/sharp/test/: BasePyTest.cs  MonoBehaviourFakeTest.cs
Native/xpy/sharp/unityfake/: MonoBehaviour.cs
Native/xpy/test/: CMakeLists.txt  main.cpp
Native/xpy/xpy/: CMakeLists.txt  log.cpp  log.h  pybind_util_manual.cpp  pybind_util_manual.h  pybind_xpy_manual.cpp  pybind_xpy_manual.h  sharppy.cpp  sharppy.h  xdef.h  xdefine.h  xpy.cpp  xpy.h  xpyhelp.cpp  xpyhelp.h
Native/xpy/xpy/common/: resmgr.cpp  resmgr.h  singleton.h  util.h
Native/xpy/xpy/cppy/: ptr.h
Native/xpy/xpy/helper/: log.cpp  log.h
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Tools/table/: table.py
Tools/table/xls/: 新手指引-测试.xlsx  道具-测试.xlsx
native/: gen.bat
native/xpy/: CMakeLists.txt
native/xpy/test/: CMakeLists.txt  main.cpp
native/xpy/xpy/: CMakeLists.txt  log.h  pybind_util_manual.cpp  xdef.h  xpy.cpp  xpy.h
proj.android-studio/: .gitignore  build.gradle
proj.android-studio/app/: CMakeLists.txt  build.gradle  cmaketest.bat
proj.android-studio/app/src/androidTest/java/com/android/hejia/xpy/: ExampleInstrumentedTest.java
proj.android-studio/app/src/main/: AndroidManifest.xml
proj.android-studio/app/src/main/cpp/: native-lib.cpp  native_tst.cpp
proj.android-studio/app/src/main/java/com/android/hejia/xpy/: JcActivityMain.java  JcApplication.java  JcNativeMan.java  MainActivity.java
proj.android-studio/app/src/main/res/layout/: activity_main.xml  content_main.xml
proj.android-studio/app/src/main/res/values/: strings.xml
proj.android-studio/app/src/test/java/com/android/hejia/xpy/: ExampleUnitTest.java
proj.android-studio/gradle/wrapper/: gradle-wrapper.properties
tools/table/: datatype.py  log.py  lst.ini  run.bat
